<resources>
    <string name="app_name">Project7</string>
    <string name="setting">Setting </string>
    <string name="noData">No Data Display </string>
    <string name="noIntremt">No network is available</string>
    <string name="section">Section</string>
    <string name="sport">sport</string>
    <string name="business">Business</string>
    <string name="news">News</string>
    <string name="music">Music</string>
    <string name="save">Back</string>
    <string name="active">settingActivity</string>

    <array name="list">
        <item>sport</item>
        <item>Business</item>
        <item>News</item>
        <item>Music</item>
    </array>
</resources>
